# SimpleRPG

./: CMakeLists.txt  component.cpp  component.hpp  components_list  constants.hpp  main.cpp  object.cpp  object.hpp  object.inl  object_manager.cpp  object_manager.hpp  scene_loader.cpp  scene_loader.hpp  sprite.cpp  sprite.hpp  sprite_renderer.cpp  sprite_renderer.hpp  spritesheet.cpp  spritesheet.hpp  testcomponent.hpp  testobject.cpp  testobject.hpp  transform.cpp  transform.hpp
assets/: level.scene
raygui/: gui_textbox_extended.h  raygui.h
src/engine/: camera.cpp  camera.hpp  component.cpp  component.hpp  constants.hpp  depth_buffer.cpp  depth_buffer.hpp  engine.cpp  object.cpp  object.hpp  object.inl  object_manager.cpp  object_manager.hpp  scene_loader.cpp  scene_loader.hpp  sprite.cpp  sprite.hpp  utils.cpp  utils.hpp
src/engine/default_components/: camera_controller.hpp  default_components_list.hpp  sprite_renderer.cpp  sprite_renderer.hpp  text_renderer.cpp  text_renderer.hpp  text_renderer_UI.cpp  text_renderer_UI.hpp  transform.cpp  transform.hpp
src/engine/default_objects/: error_message.cpp  error_message.hpp  spritesheet.cpp  spritesheet.hpp
src/game/components/: comp_cam_transform.cpp  comp_cam_transform.hpp  comp_player_controller.cpp  comp_player_controller.hpp  comp_top_down_controller.cpp  comp_top_down_controller.hpp  components_list.hpp  testcomponent.hpp
src/game/objects/: obj_player.cpp  obj_player.hpp  obj_template.cpp  obj_template.hpp  object_template.cpp  testobject.cpp  testobject.hpp
src/tools/level_editor/components/: comp_level_editor_main.cpp  comp_level_editor_main.hpp  comp_object_placer.cpp  comp_object_placer.hpp  comp_object_selector.cpp  comp_object_selector.hpp
src/tools/level_editor/objects/: obj_level_editor.cpp  obj_level_editor.hpp
